<resources>
    <string name="app_name">USTH Weather</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="Hanoi">HaNoi</string>
    <string name="Danang">DaNang</string>
    <string name="HaiPhong">HaiPhong</string>
    <string name="Mon">MonDay</string>
    <string name="Tue">Tuesday</string>
    <string name="Wed">Wednesday</string>
    <string name="Thu">Thursday</string>
    <string name="Fri">Friday</string>
    <string name="Sat">Saturday</string>
    <string name="Sun">Sunday</string>

</resources>