<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ForecastFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:id="@+id/Monday"
        android:layout_width="match_parent"
        android:layout_height="62dp">

        <LinearLayout
            android:id="@+id/Left_part"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvMonday"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/Mon"
                android:textAlignment="center"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/ivMon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/weather_247" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/Right_part"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Top_part_Mon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Partly Cloudy" />

            <TextView
                android:id="@+id/bottom_part_Mon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="24C-31C" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/Tuesday"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/left_part_2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_Tues"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/Tue"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/basis_cloud"
                tools:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Showers" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="24C-30C" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/Wednesday"
        android:layout_width="match_parent"
        android:layout_height="62dp">

        <LinearLayout
            android:id="@+id/Left_part_3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvWed"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/Wed"
                android:textAlignment="center"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/ivWed"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/weather_247" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/Right_part_3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Top_part_Wed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Rain" />

            <TextView
                android:id="@+id/bottom_part_Wed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="22C-23C" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/Thursday"
        android:layout_width="match_parent"
        android:layout_height="62dp">

        <LinearLayout
            android:id="@+id/Left_part_4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvThursday"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/Thu"
                android:textAlignment="center"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/ivThurs"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/weather_247" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/Right_part_4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Top_part_Thurs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Scattered Shower" />

            <TextView
                android:id="@+id/bottom_part_Thurs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="22C-27C" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/Friday"
        android:layout_width="match_parent"
        android:layout_height="62dp">

        <LinearLayout
            android:id="@+id/Left_part_5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvFriday"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/Fri"
                android:textAlignment="center"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/ivFri"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/weather_247" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/Right_part_5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Top_part_Fri"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Mostly Cloudy" />

            <TextView
                android:id="@+id/bottom_part_Fri"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="22C-30C" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/Saturday"
        android:layout_width="match_parent"
        android:layout_height="62dp">

        <LinearLayout
            android:id="@+id/Left_part_6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvSaturday"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/Sat"
                android:textAlignment="center"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/ivSat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                tools:src="@drawable/weather_247" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/Right_part_6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Top_part_Sat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Partly Cloudy" />

            <TextView
                android:id="@+id/bottom_part_Sat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="24C-31C" />
        </LinearLayout>



    </LinearLayout>

    <LinearLayout
        android:id="@+id/Sunday"
        android:layout_width="match_parent"
        android:layout_height="62dp">

        <LinearLayout
            android:id="@+id/Left_part_7"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvSunday"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/Sun"
                android:textAlignment="center"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/ivSun"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/weather_247" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/Right_part_7"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Top_part_Sun"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="ThuderStorms" />

            <TextView
                android:id="@+id/bottom_part_Sun"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="25C-28C" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Monday_2"
        android:layout_width="match_parent"
        android:layout_height="62dp">

        <LinearLayout
            android:id="@+id/Left_part_8"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvMonday_2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Mon"
                android:textAlignment="center"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/ivMon_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/weather_247" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/Right_part_8"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Top_part_Mon2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Scattered ThuderStorms" />

            <TextView
                android:id="@+id/bottom_part_Mon2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="24C-27C" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Tuesday_2"
        android:layout_width="match_parent"
        android:layout_height="62dp">

        <LinearLayout
            android:id="@+id/Left_part_9"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvTuesday_2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Tue"
                android:textAlignment="center"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/ivMon2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/weather_247" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/Right_part_9"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Top_part_Tue2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Showers" />

            <TextView
                android:id="@+id/bottom_part_Tue2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="24C-26C" />
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/Wednesday_2"
        android:layout_width="match_parent"
        android:layout_height="62dp">

        <LinearLayout
            android:id="@+id/Left_part_10"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvWednesday_2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Tue"
                android:textAlignment="center"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/ivWed2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/weather_247" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/Right_part_10"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Top_part_Wed2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Showers" />

            <TextView
                android:id="@+id/bottom_part_Wed2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="24C-26C" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
